Turn README into Markdown and add more info.

--- a/README
+++ b/README
@@ -1,2 +1,23 @@
+# ArchReactorOS 1.0
+
+ArchReactorOS is a membership application software for your website.
+
+Copyright(C), ArchReactor, 2010, All Rights Reserved. Parts Copyright(C), Nicecoder, 2008, All Rights Reserved. See license.txt for license.
+
+## Features
+
+* With this application you can deliver many kinds of membership.
+* Nice member can manage members payment options.
+* Nice member can manage orders and mailing lists for members.
+* Integrated payment system (supporting PayPal).
+
+## Installation
+
+* Upload the files to your website.
+* To begin installation visit
+<%sitename%>/install/install.php and you'll be guided by a step-by-step installation.
+
+## Notes
+
 2010-03-08 CW - This is the current code, but the db schema is not current.
 
